# bazel-rules-jvm-external-issue

./: .bazelrc  BUILD.bazel  MODULE.bazel  README.md  maven_install.json
patches/: rules_jvm_external.patch
